--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,12 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+							{
+								"glob": "**/*",
+								"input": "src/assets",
+								"output": "/assets"
+							}
             ],
             "styles": [
               "src/styles.scss"
@@ -88,7 +93,12 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+							{
+								"glob": "**/*",
+								"input": "src/assets",
+								"output": "/assets"
+							}
             ],
             "styles": [
               "src/styles.scss"
