--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@types/three": "^0.168.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
+    "socket.io-client": "^4.7.5",
+    "three": "^0.168.0",
+    "three-stdlib": "^2.33.0",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
@@ -27,12 +30,14 @@
     "@angular/cli": "^18.2.5",
     "@angular/compiler-cli": "^18.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/socket.io-client": "^3.0.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "tslib": "^2.7.0",
     "typescript": "~5.5.2"
   }
 }
