--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@tweenjs/tween.js": "^25.0.0",
     "@types/three": "^0.168.0",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.7.5",
